footer, nav positioning

--- a/team.html
+++ b/team.html
@@ -51,7 +51,7 @@
             </li>
         </ul> -->
         <div class="content">
-            <div class="container">
+            <div class="container .clearfix">
                 <ul class="navigation">
                         <li class="navigation__mainLink">
                             <a href="http://ya.ru" class="navigation__link">
@@ -185,7 +185,7 @@
                     <strong>LoftSchool</strong></a>.
                 Автор работы: <strong>Данилов Антон</strong>.
             </div>
-            <a href="http://ya.ru" class="footer__homeLink">
+            <a href="http://ya.ru" class="homelink--footer">
                 <img src="img/logo_header.png" alt="logo" class=homeLink_footer>
             </a>
             <div class="footer__social">
