--- a/team.html
+++ b/team.html
@@ -17,9 +17,7 @@
                     <img src="img/logo_header.png" alt="logo" class=logo>
                 </a>
                 <div class=info>
-                    <a href="tel:88000039210" class="phone">
-                    8 (800) 00-392-10 
-                    </a>
+                    <a href="tel:88000039210" class="phone">8 (800) 00-392-10</a>
                     <span class="dropdown">
                         <button class="dropdown__button">График работы</button>
                         <span class="dropdown__content">
@@ -27,9 +25,6 @@
                             <div class="lunch">обед: 14:00-14:30</div>
                         </span>
                     </span>
-                    </body>
-                    </html>
-                    
                 </div>
             </div>
         </div>
@@ -69,7 +64,7 @@
                             </a>
                         </li>
                     </ul>
-                <div class="main"></div>
+                <div class="main">
                     <ul class="breadcrumbs">
                         <li class="breadcrumbs__item"><a class="main__link" href="main.html">Главная</a></li>
                         <li class="breadcrumbs__item">Экипаж</li>
@@ -175,7 +170,8 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>     
+   
     <div class="footer">
         <div class="container">
             <div class="footer__copyright">
