--- a/team.html
+++ b/team.html
@@ -28,25 +28,8 @@
                 </div>
             </div>
         </div>
-        <!-- <ul class="navigation">
-            <li class="navigation__mainLink">
-                <a href="http://ya.ru" class="navigation__link">
-                    <span class="navigation__name">Главная</span>
-                </a>
-            </li>
-            <li class="navigation__teamLink">
-                <a href="ya.ru" class="navigation__link">
-                    <span class="navigation__name">Экипаж</span>
-                </a>
-            </li>
-            <li class="navigation__feedLink">
-                <a href="http://ya.ru" class="navigation__link">
-                    <span class="navigation__name">Отзывы</span>
-                </a>
-            </li>
-        </ul> -->
         <div class="content">
-            <div class="container .clearfix">
+            <div class="container clearfix">
                 <ul class="navigation">
                         <li class="navigation__mainLink">
                             <a href="http://ya.ru" class="navigation__link">
@@ -54,7 +37,7 @@
                             </a>
                         </li>
                         <li class="navigation__teamLink">
-                            <a href="ya.ru" class="navigation__link">
+                            <a href="http://ya.ru" class="navigation__link">
                                 <span class="navigation__name">Экипаж</span>
                             </a>
                         </li>
@@ -63,7 +46,7 @@
                                 <span class="navigation__name">Отзывы</span>
                             </a>
                         </li>
-                    </ul>
+                </ul>
                 <div class="main">
                     <ul class="breadcrumbs">
                         <li class="breadcrumbs__item"><a class="main__link" href="main.html">Главная</a></li>
@@ -216,5 +199,6 @@
             </div>
         </div>
     </div>
+    <!-- </div> -->
 </body>
 </html>
