main width fixed, float rigth

--- a/team.html
+++ b/team.html
@@ -31,18 +31,24 @@
         <div class="content">
             <div class="container clearfix">
                 <ul class="navigation">
-                        <li class="navigation__mainLink">
+                        <!-- <li class="navigation__mainLink"> -->
+                        <li class="navigation__item">
                             <a href="http://ya.ru" class="navigation__link">
+                                <img class="navigation__image" src="img/main_icon.png" alt="mainLink">
                                 <span class="navigation__name">Главная</span>
                             </a>
                         </li>
-                        <li class="navigation__teamLink">
+                        <!-- <li class="navigation__teamLink"> -->
+                        <li class="navigation__item">
                             <a href="http://ya.ru" class="navigation__link">
+                                <img class="navigation__image" src="img/team_icon.png" alt="mainLink">
                                 <span class="navigation__name">Экипаж</span>
                             </a>
                         </li>
-                        <li class="navigation__feedLink">
+                        <!-- <li class="navigation__feedLink"> -->
+                        <li class="navigation__item">
                             <a href="http://ya.ru" class="navigation__link">
+                                <img class="navigation__image" src="img/feed_icon.png" alt="mainLink">
                                 <span class="navigation__name">Отзывы</span>
                             </a>
                         </li>
