--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="header">
+        <header class="header">
             <div class="container clearfix">
                 <div class="header__column1">
                     <a href="http://ya.ru" class="homeLink_header">
@@ -31,7 +31,7 @@
                     </div>
                 </div>
             </div>
-        
+        </header>
         <div class="main">
             <div class="container clearfix">
                 <h1 class="main__title">О компании</h1>
