--- a/team.html
+++ b/team.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="header">
+        <header class="header">
             <div class="container clearfix">
                 <a href="http://ya.ru" class="homeLink_header">
                     <img src="img/logo_header.png" alt="logo" class=logo>
@@ -27,10 +27,10 @@
                     </span>
                 </div>
             </div>
-        </div>
+        </header>
         <div class="content">
             <div class="container clearfix">
-                <ul class="navigation">
+                <nav class="navigation">
                         <!-- <li class="navigation__mainLink"> -->
                         <li class="navigation__item">
                             <a href="http://ya.ru" class="navigation__link">
@@ -52,8 +52,8 @@
                                 <span class="navigation__name">Отзывы</span>
                             </a>
                         </li>
-                </ul>
-                <div class="main">
+                </nav>
+                <main class="main">
                     <ul class="breadcrumbs">
                         <li class="breadcrumbs__item"><a class="main__link" href="main.html">Главная</a></li>
                         <li class="breadcrumbs__item">Экипаж</li>
@@ -156,12 +156,12 @@
                             </div>
                         </li>
                     </ul>
-                </div>
+                </main>
             </div>
         </div>
     </div>     
    
-    <div class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="footer__copyright">
                 Сделано с любовью и старанием
@@ -204,7 +204,6 @@
                 </ul>
             </div>
         </div>
-    </div>
-    <!-- </div> -->
+    </footer>
 </body>
 </html>
