nav hover changes

--- a/team.html
+++ b/team.html
@@ -30,34 +30,34 @@
         </header>
         <div class="content">
             <div class="container clearfix">
-                <nav class="navigation">
-                        <!-- <li class="navigation__mainLink"> -->
-                        <li class="navigation__item">
-                            <a href="http://ya.ru" class="navigation__link">
-                                <img class="navigation__image" src="img/main_icon.png" alt="mainLink">
-                                <span class="navigation__name">Главная</span>
-                            </a>
-                        </li>
-                        <!-- <li class="navigation__teamLink"> -->
-                        <li class="navigation__item">
-                            <a href="http://ya.ru" class="navigation__link">
-                                <img class="navigation__image" src="img/team_icon.png" alt="mainLink">
-                                <span class="navigation__name">Экипаж</span>
-                            </a>
-                        </li>
-                        <!-- <li class="navigation__feedLink"> -->
-                        <li class="navigation__item">
-                            <a href="http://ya.ru" class="navigation__link">
-                                <img class="navigation__image" src="img/feed_icon.png" alt="mainLink">
-                                <span class="navigation__name">Отзывы</span>
-                            </a>
-                        </li>
-                </nav>
+                <aside class=asideBar>
+                    <nav class="navigation">
+                            <li class="navigation__item">
+                                <a href="http://ya.ru" class="navigation__link">
+                                    <div class="navigation__icon navigation__icon_plane" alt="mainLink"></div>
+                                    <span class="navigation__name">Главная</span>
+                                </a>
+                            </li>
+                            <li class="navigation__item">
+                                <a href="http://ya.ru" class="navigation__link">
+                                    <div class="navigation__icon navigation__icon_cap" alt="mainLink"></div>
+                                    <span class="navigation__name">Экипаж</span>
+                                </a>
+                            </li>
+                            <li class="navigation__item">
+                                <a href="http://ya.ru" class="navigation__link">
+                                    <div class="navigation__icon navigation__icon_star" alt="mainLink"></div>
+                                    <span class="navigation__name">Отзывы</span>
+                                </a>
+                            </li>
+                    </nav>
+                </aside>
+            
                 <main class="main">
-                    <ul class="breadcrumbs">
+                    <nav class="breadcrumbs">
                         <li class="breadcrumbs__item"><a class="main__link" href="main.html">Главная</a></li>
                         <li class="breadcrumbs__item">Экипаж</li>
-                    </ul>
+                    </nav>
                     <h1 class="main__title">Экипаж</h1>
                     <ul class="crew">
                         <li class="profile">
