--- a/index.html
+++ b/index.html
@@ -32,6 +32,33 @@
                 </div>
             </div>
         </header>
+        <div class="content">
+                <div class="container clearfix">
+                    <aside class=asideBar>
+                        <nav class="navigation">
+                                <!-- <li class="navigation__mainLink"> -->
+                                <li class="navigation__item">
+                                    <a href="http://ya.ru" class="navigation__link">
+                                        <img class="navigation__image" src="img/main_icon.png" alt="mainLink">
+                                        <span class="navigation__name">Главная</span>
+                                    </a>
+                                </li>
+                                <!-- <li class="navigation__teamLink"> -->
+                                <li class="navigation__item">
+                                    <a href="http://ya.ru" class="navigation__link">
+                                        <img class="navigation__image" src="img/team_icon.png" alt="mainLink">
+                                        <span class="navigation__name">Экипаж</span>
+                                    </a>
+                                </li>
+                                <!-- <li class="navigation__feedLink"> -->
+                                <li class="navigation__item">
+                                    <a href="http://ya.ru" class="navigation__link">
+                                        <img class="navigation__image" src="img/feed_icon.png" alt="mainLink">
+                                        <span class="navigation__name">Отзывы</span>
+                                    </a>
+                                </li>
+                        </nav>
+                    </aside>
         <div class="main">
             <div class="container clearfix">
                 <h1 class="main__title">О компании</h1>
@@ -71,6 +98,7 @@
                     <li class="partners__item"></li>
                 </ul>
             </div>
+        </div>
         </div>    
     </div>
     
