--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@
 </head>
 <body>
     <div class="wrapper">
-        <header class="header">
-            <div class="container clearfix">
-                <div class="header__column1">
+            <header class="header">
+                <div class="container clearfix">
                     <a href="http://ya.ru" class="homeLink_header">
-                    <img src="img/logo_header.png" alt="logo" class=logo>
+                        <img src="img/logo_header.png" alt="logo" class=logo>
                     </a>
-                </div>
-                <div class="header__column2">
                     <div class=info>
                         <a href="tel:88000039210" class="phone">8 (800) 00-392-10</a>
                         <span class="dropdown">
@@ -30,35 +27,40 @@
                         </span>
                     </div>
                 </div>
-            </div>
-        </header>
+            </header>
         <div class="content">
-                <div class="container clearfix">
-                    <aside class=asideBar>
-                        <nav class="navigation">
-                                <!-- <li class="navigation__mainLink"> -->
-                                <li class="navigation__item">
-                                    <a href="http://ya.ru" class="navigation__link">
-                                        <img class="navigation__image" src="img/main_icon.png" alt="mainLink">
-                                        <span class="navigation__name">Главная</span>
-                                    </a>
-                                </li>
-                                <!-- <li class="navigation__teamLink"> -->
-                                <li class="navigation__item">
-                                    <a href="http://ya.ru" class="navigation__link">
-                                        <img class="navigation__image" src="img/team_icon.png" alt="mainLink">
-                                        <span class="navigation__name">Экипаж</span>
-                                    </a>
-                                </li>
-                                <!-- <li class="navigation__feedLink"> -->
-                                <li class="navigation__item">
-                                    <a href="http://ya.ru" class="navigation__link">
-                                        <img class="navigation__image" src="img/feed_icon.png" alt="mainLink">
-                                        <span class="navigation__name">Отзывы</span>
-                                    </a>
-                                </li>
-                        </nav>
-                    </aside>
+            <div class="container clearfix">
+                <aside class=asideBar>
+                    <nav class="navigation">
+                            <li class="navigation__item">
+                                <a href="http://ya.ru" class="navigation__link">
+                                    <div class="navigation__icon navigation__icon_plane" alt="mainLink"></div>
+                                    <span class="navigation__name">Главная</span>
+                                </a>
+                            </li>
+                            <li class="navigation__item">
+                                <a href="http://ya.ru" class="navigation__link">
+                                    <div class="navigation__icon navigation__icon_cap" alt="mainLink"></div>
+                                    <span class="navigation__name">Экипаж</span>
+                                </a>
+                            </li>
+                            <li class="navigation__item">
+                                <a href="http://ya.ru" class="navigation__link">
+                                    <div class="navigation__icon navigation__icon_star" alt="mainLink"></div>
+                                    <span class="navigation__name">Отзывы</span>
+                                </a>
+                            </li>
+                    </nav>
+                </aside>
+            </div>
+        </div>
+
+
+
+
+
+
+
         <div class="main">
             <div class="container clearfix">
                 <h1 class="main__title">О компании</h1>
