main page update

--- a/index.html
+++ b/index.html
@@ -11,72 +11,67 @@
 </head>
 <body>
     <div class="wrapper">
-            <header class="header">
-                <div class="container clearfix">
-                    <a href="http://ya.ru" class="homeLink_header">
-                        <img src="img/logo_header.png" alt="logo" class=logo>
-                    </a>
-                    <div class=info>
-                        <a href="tel:88000039210" class="phone">8 (800) 00-392-10</a>
-                        <span class="dropdown">
-                            <button class="dropdown__button">График работы</button>
-                            <span class="dropdown__content">
-                                <div class="workHours">пн-вс: 09:00-20:00</div>
-                                <div class="lunch">обед: 14:00-14:30</div>
-                            </span>
+        <header class="header">
+            <div class="container clearfix">
+                <a href="http://ya.ru" class="homeLink_header">
+                    <img src="img/logo_header.png" alt="logo" class=logo>
+                </a>
+                <div class=info>
+                    <a href="tel:88000039210" class="phone">8 (800) 00-392-10</a>
+                    <span class="dropdown">
+                        <button class="dropdown__button">График работы</button>
+                        <span class="dropdown__content">
+                            <div class="workHours">пн-вс: 09:00-20:00</div>
+                            <div class="lunch">обед: 14:00-14:30</div>
                         </span>
-                    </div>
+                    </span>
                 </div>
+            </div>
             </header>
         <div class="content">
-            <div class="container clearfix">
-                <aside class=asideBar>
-                    <nav class="navigation">
-                            <li class="navigation__item">
-                                <a href="http://ya.ru" class="navigation__link">
-                                    <div class="navigation__icon navigation__icon_plane" alt="mainLink"></div>
-                                    <span class="navigation__name">Главная</span>
-                                </a>
-                            </li>
-                            <li class="navigation__item">
-                                <a href="http://ya.ru" class="navigation__link">
-                                    <div class="navigation__icon navigation__icon_cap" alt="mainLink"></div>
-                                    <span class="navigation__name">Экипаж</span>
-                                </a>
-                            </li>
-                            <li class="navigation__item">
-                                <a href="http://ya.ru" class="navigation__link">
-                                    <div class="navigation__icon navigation__icon_star" alt="mainLink"></div>
-                                    <span class="navigation__name">Отзывы</span>
-                                </a>
-                            </li>
-                    </nav>
+                <aside class=navBar>
+                    <div class="container">
+                        <nav class="navigation">
+                                <li class="navigation__item">
+                                    <a href="http://ya.ru" class="navigation__link">
+                                        <div class="navigation__icon navigation__icon_plane" alt="mainLink"></div>
+                                        <span class="navigation__name">Главная</span>
+                                    </a>
+                                </li>
+                                <li class="navigation__item">
+                                    <a href="http://ya.ru" class="navigation__link">
+                                        <div class="navigation__icon navigation__icon_cap" alt="mainLink"></div>
+                                        <span class="navigation__name">Экипаж</span>
+                                    </a>
+                                </li>
+                                <li class="navigation__item">
+                                    <a href="http://ya.ru" class="navigation__link">
+                                        <div class="navigation__icon navigation__icon_star" alt="mainLink"></div>
+                                        <span class="navigation__name">Отзывы</span>
+                                    </a>
+                                </li>
+                        </nav>
+                    </div>
                 </aside>
             </div>
-        </div>
-
-
-
-
-
-
-
+            
         <div class="main">
             <div class="container clearfix">
+            </div>
                 <h1 class="main__title">О компании</h1>
                 <div class="company">
                     <p class="text">
-                        Air Planet — это крупнейшая авиакомпания в Москве. Благодаря сотрудничеству с Europe Airlines, мы предлагаем билеты на комфортабельные рейсы в большинство известных курортных городов Западной Европы. Также мы сотрудничаем с американскими и австралийскими авиакомпаниями, за счет чего обеспечиваем возможность заказа билетов на рейсы практически в любую точку мира.
+                        <span class=bold>Air Planet</span> — это крупнейшая авиакомпания в Москве. Благодаря сотрудничеству с <span class=bold>Europe Airlines</span>, мы предлагаем билеты на комфортабельные рейсы в большинство известных курортных городов Западной Европы. Также мы сотрудничаем с американскими и австралийскими авиакомпаниями, за счет чего обеспечиваем возможность заказа билетов на рейсы практически в любую точку мира.
                     </p>
                     <p class="text">
                         Нашими ключевыми клиентами остаются:
                     </p>
                     <ul class="text__list">
                         <li class="text__item">
-                            Частные лица — туристы и путешественники, как самостоятельные, так и организованные турфирмами.
+                                • Частные лица — туристы и путешественники, как самостоятельные, так и организованные турфирмами.
                         </li>
                         <li class="text__item">
-                            Коммерческие организации, которые отправляют своих сотрудников в командировки. За счет отлаженной логистики мы готовы предложить наиболее выгодные цены.
+                                • Коммерческие организации, которые отправляют своих сотрудников в командировки. За счет отлаженной логистики мы готовы предложить наиболее выгодные цены.
                         </li>
                     </ul>
                     <p class="text">
@@ -88,8 +83,10 @@
                     </p>
                 </div>
                 <div class="booking">
-                    <a href="#" class="booking__link"></a>
-                    <a href="tel:88000039210" class="phone--booking"></a>
+                    Бронировать билеты в нашей авиакомпании удобно. Для этого можно оставить  
+                    <a href="#" class="booking__link">заявку на сайте</a>
+                    или же позвонить по номеру круглосуточной поддержки
+                    <a href="tel:88000039210" class="phone--booking">8 (800) 00-392-10</a>.
                 </div>
                 <ul class="partners">
                     <li class="partners__item"></li>
@@ -101,7 +98,6 @@
                 </ul>
             </div>
         </div>
-        </div>    
     </div>
     
 
