--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                     <a href="tel:88000039210" class="phone--booking">8 (800) 00-392-10</a>.
                 </div>
                 <ul class="partners">
+                    <p class="partners__title">Партнёры</p>
                     <li class="partners__item"></li>
                     <li class="partners__item"></li>
                     <li class="partners__item"></li>
