--- a/team.html
+++ b/team.html
@@ -61,7 +61,7 @@
                     <h1 class="main__title">Экипаж</h1>
                     <ul class="crew">
                         <li class="profile">
-                            <img src="img/alex.jpg" alt="фото Белов Алексей Вадимович" class="profile__photo">
+                            <img src="img/crew/alex.jpg" alt="фото Белов Алексей Вадимович" class="profile__photo">
                             <div class="person">
                                 <div class="person__name">Белов Алексей Вадимович</div>
                                 <div class="person__position">Главный пилот</div>
@@ -75,7 +75,7 @@
                             </div>
                         </li>
                         <li class="profile">
-                            <img src="img/inna.jpg" alt="фото Сухарина Инна Николаевна" class="profile__photo">
+                            <img src="img/crew/inna.jpg" alt="фото Сухарина Инна Николаевна" class="profile__photo">
                             <div class="person">
                                 <div class="person__name">Сухарина Инна Николаевна</div>
                                 <div class="person__position">Бортпроводник</div>
@@ -91,7 +91,7 @@
                             </div>
                         </li>
                         <li class="profile">
-                            <img src="img/boris.jpg" alt="фото Лещ Борис Анатольевич" class="profile__photo">
+                            <img src="img/crew/boris.jpg" alt="фото Лещ Борис Анатольевич" class="profile__photo">
                             <div class="person">
                                 <div class="person__name">Лещ Борис Анатольевич</div>
                                 <div class="person__position">Авиатехник</div>
@@ -106,7 +106,7 @@
                             </div>
                         </li>
                         <li class="profile">
-                            <img src="img/elina.jpg" alt="фото Дигангидзе Элина Даниловна" class="profile__photo">
+                            <img src="img/crew/elina.jpg" alt="фото Дигангидзе Элина Даниловна" class="profile__photo">
                             <div class="person">
                                 <div class="person__name">Дигангидзе Элина Даниловна</div>
                                 <div class="person__position">Диспетчер</div>
@@ -122,7 +122,7 @@
                             </div>
                         </li>
                         <li class="profile">
-                            <img src="img/elena.jpg" alt="фото Следь Елена Николаевна" class="profile__photo">
+                            <img src="img/crew/elena.jpg" alt="фото Следь Елена Николаевна" class="profile__photo">
                             <div class="person">
                                 <div class="person__name">Следь Елена Николаевна</div>
                                 <div class="person__position">Старший бортпроводник</div>
@@ -139,7 +139,7 @@
                             </div>
                         </li>
                         <li class="profile">
-                            <img src="img/yrii.jpg" alt="фото Нестеренко Юрий Афанасьевич" class="profile__photo">
+                            <img src="img/crew/yrii.jpg" alt="фото Нестеренко Юрий Афанасьевич" class="profile__photo">
                             <div class="person">
                                 <div class="person__name">Нестеренко Юрий Афанасьевич</div>
                                 <div class="person__position">Второй пилот</div>
