--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 </div>
             </div>
             </header>
+
         <div class="content">
                 <aside class=navBar>
                     <div class="container">
@@ -54,11 +55,12 @@
                     </div>
                 </aside>
             </div>
-            
         <div class="main">
             <div class="container clearfix">
-            </div>
-                <h1 class="main__title">О компании</h1>
+            
+                <div class="main__header">
+                        <h1 class="main__title">О компании</h1>
+                </div>
                 <div class="company">
                     <p class="text">
                         <span class=bold>Air Planet</span> — это крупнейшая авиакомпания в Москве. Благодаря сотрудничеству с <span class=bold>Europe Airlines</span>, мы предлагаем билеты на комфортабельные рейсы в большинство известных курортных городов Западной Европы. Также мы сотрудничаем с американскими и австралийскими авиакомпаниями, за счет чего обеспечиваем возможность заказа билетов на рейсы практически в любую точку мира.
@@ -84,18 +86,34 @@
                 </div>
                 <div class="booking">
                     Бронировать билеты в нашей авиакомпании удобно. Для этого можно оставить  
-                    <a href="#" class="booking__link">заявку на сайте</a>
-                    или же позвонить по номеру круглосуточной поддержки
+                    <a href="#" class="booking__link">заявку на сайте</a> или же позвонить по номеру круглосуточной поддержки
                     <a href="tel:88000039210" class="phone--booking">8 (800) 00-392-10</a>.
                 </div>
                 <ul class="partners">
                     <p class="partners__title">Партнёры</p>
-                    <li class="partners__item"></li>
-                    <li class="partners__item"></li>
-                    <li class="partners__item"></li>
-                    <li class="partners__item"></li>
-                    <li class="partners__item"></li>
-                    <li class="partners__item"></li>
+                    <li class="partners__item">
+                        <a href="#" class="partners__link">
+                        <img src="/img/logo/bmp.png" alt="bmp" class="partners__img">
+                        </a>
+                    </li>
+                    <li class="partners__item">
+                        <img src="/img/logo/tetra.png" alt="tetra" class="partners__img">
+                    </li>
+                    <li class="partners__item">
+                        <img src="/img/logo/sibair.png" alt="sibair" class="partners__img">
+                    </li>
+                    <li class="partners__item">
+                        <img src="/img/logo/oneair.png" alt="oneair" class="partners__img">
+                    </li>
+                    <li class="partners__item">
+                        <img src="/img/logo/bingair.png" alt="bingair" class="partners__img">
+                    </li>
+                    <li class="partners__item">
+                        <img src="/img/logo/ural.png" alt="ural" class="partners__img">
+                    </li>
+                    <li class="partners__item">
+                        <img src="/img/logo/bmp" alt="" class="partners__img">
+                    </li>
                 </ul>
             </div>
         </div>
