new css folders, new files

--- a/team.html
+++ b/team.html
@@ -167,8 +167,8 @@
                 Сделано с любовью и старанием
                 на курсе "Веб разработчик"
                 <a class=footer__loftschool href="http://loftschool.com">
-                    <strong>LoftSchool</strong></a>.
-                Автор работы: <strong>Данилов Антон</strong>.
+                    <span class=bold>LoftSchool<span></a>.
+                Автор работы: <span class=bold>Данилов Антон</span>.
             </div>
             <a href="http://ya.ru" class="homelink--footer">
                 <img src="img/logo_header.png" alt="logo" class=homeLink_footer>
